samples/_failures_safe/1761707042_197bb6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3383a50f.c: In function ‘tokenize’:
./samples/SAFE/__tmp_3383a50f.c:163:9: error: expected expression at end of input
  163 |         tokens[
      |         ^~~~~~
./samples/SAFE/__tmp_3383a50f.c:163:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3383a50f.c:163:9: error: expected declaration or statement at end of input
